# waverunner-sdr

./: .gitignore  AGENTS.md  AUDIT_GAP_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROD_GAP_REPORT.md  PROD_VALIDATION_REPORT.md  README.md  VALIDATION_REPORT.md  deny.toml  slo.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  sbom.yml
crates/wavecore/: Cargo.toml
crates/wavecore/benches/: dsp_benchmarks.rs
crates/wavecore/src/: audio.rs  bookmarks.rs  buffer.rs  captures.rs  error.rs  frequency_db.rs  lib.rs  logging.rs  migration.rs  recording.rs  sigmf.rs  signal_identify.rs  slo.rs  types.rs  util.rs
crates/wavecore/src/analysis/: bitstream.rs  burst.rs  comparison.rs  export.rs  measurement.rs  mod.rs  modulation.rs  report.rs  tracking.rs
crates/wavecore/src/dsp/: agc.rs  convert.rs  ddc.rs  decoder.rs  detection.rs  estimation.rs  fft.rs  filter_design.rs  filtering.rs  iir.rs  mod.rs  pll.rs  power.rs  preprocess.rs  resample.rs  statistics.rs  windows.rs
crates/wavecore/src/dsp/decoders/: adsb.rs  ais.rs  aprs.rs  mod.rs  multimon.rs  noaa_apt.rs  ook.rs  pocsag.rs  rds.rs  rtl433.rs  subprocess.rs  tools.rs  util.rs
crates/wavecore/src/dsp/demod/: am.rs  cw.rs  fm.rs  mod.rs  ssb.rs
crates/wavecore/src/hardware/: mod.rs  rtlsdr.rs  traits.rs
crates/wavecore/src/mode/: classifier.rs  general.rs  mod.rs  profile.rs
crates/wavecore/src/mode/profiles/: airband.toml  ais.toml  aprs.toml  aviation.toml  fm-broadcast.toml  fm-survey.toml  ism-sensor-hunt.toml  noaa-apt.toml  pager.toml
crates/wavecore/src/session/: checkpoint.rs  manager.rs  mod.rs  replay.rs  timeline.rs
crates/wavecore/tests/: health_transition_test.rs  pipeline_integration.rs  resilience_test.rs  soak_test.rs  stress_test.rs
crates/waveplugins/: Cargo.toml
crates/waveplugins/src/: lib.rs
crates/waverunner-cli/: Cargo.toml
crates/waverunner-cli/src/: main.rs
crates/waverunner-cli/src/commands/: analyze.rs  bands.rs  bookmark.rs  decode.rs  demod.rs  identify.rs  info.rs  library.rs  listen.rs  mod.rs  mode.rs  probe.rs  record.rs  recover.rs  replay.rs  scan.rs  tools.rs  tune.rs
crates/waverunner-cli/tests/: library_manage.rs  replay_latest.rs
crates/waverunner-gui/: Cargo.toml  tauri.conf.json
crates/waverunner-gui/capabilities/: default.json
crates/waverunner-gui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/waverunner-gui/frontend/src/: App.svelte  app.css
crates/waverunner-gui/frontend/src/lib/: types.ts
crates/waverunner-gui/frontend/src/lib/canvas/: spectrum.ts  waterfall.ts
crates/waverunner-gui/frontend/src/lib/components/: AnalysisPanel.svelte  Controls.svelte  DecodedMessages.svelte  DeviceConfig.svelte  Header.svelte  LibraryPanel.svelte  Settings.svelte  SignalStats.svelte  Spectrum.svelte  TrackingChart.svelte  Waterfall.svelte
crates/waverunner-gui/frontend/src/lib/stores/: radio.ts
crates/waverunner-gui/src/: bridge.rs  commands.rs  main.rs  state.rs
crates/waverunner-tui/: Cargo.toml
crates/waverunner-tui/src/: app.rs  constellation.rs  input.rs  main.rs  spectrum.rs  ui.rs  waterfall.rs
crates/waveviz/: Cargo.toml
crates/waveviz/src/: colormap.rs  constellation.rs  error.rs  lib.rs  renderer.rs  spectrum.rs  waterfall.rs
crates/waveviz/src/shaders/: constellation.wgsl  spectrum.wgsl  waterfall.wgsl
docs/: LOGGING.md  RECOVERY.md  SLO.md  SUPPORT_MATRIX.md
