[workspace]
resolver = "2"
members = [
    "crates/wavecore",
    "crates/waveplugins",
    "crates/waveviz",
    "crates/waverunner-cli",
    "crates/waverunner-tui",
    "crates/waverunner-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core types
num-complex = { version = "0.4", features = ["serde"] }
rustfft = "6.2"

# Hardware
rtlsdr_mt = "2.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Async (CLI only)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Audio/Recording
hound = "3.5"
cpal = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GPU visualization
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }

# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-build = { version = "2", features = [] }

# Internal crates
wavecore = { path = "crates/wavecore" }
waveplugins = { path = "crates/waveplugins" }
waveviz = { path = "crates/waveviz" }
