[workspace]
resolver = "2"
members = [
    "crates/wavecore",
    "crates/waveplugins",
    "crates/waveviz",
    "crates/waverunner-cli",
    "crates/waverunner-tui",
    "crates/waverunner-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/SeladorGroup/waverunner-sdr"
homepage = "https://github.com/SeladorGroup/waverunner-sdr"
readme = "README.md"
keywords = ["sdr", "radio", "dsp", "rtl-sdr", "signal-processing"]
categories = ["science", "hardware-support", "command-line-utilities"]

[workspace.dependencies]
# Core types
num-complex = { version = "0.4", features = ["serde"] }
rustfft = "6.2"

# Hardware
rtlsdr_mt = "2.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Async (CLI only)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Image export
image = { version = "0.25", default-features = false, features = ["png"] }

# Audio/Recording
hound = "3.5"
cpal = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GPU visualization
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }

# Tauri
tauri = { version = "2" }
tauri-build = { version = "2", features = [] }

# Internal crates
wavecore = { version = "0.1.0", path = "crates/wavecore" }
waveplugins = { version = "0.1.0", path = "crates/waveplugins" }
waveviz = { version = "0.1.0", path = "crates/waveviz" }
