[package]
name = "wavecore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core DSP engine and hardware abstraction for Waverunner SDR platform"

[dependencies]
num-complex = { workspace = true }
rustfft = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
hound = { workspace = true }
cpal = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dependencies.rtlsdr_mt]
workspace = true
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dsp_benchmarks"
harness = false

[features]
default = ["rtlsdr", "audio"]
rtlsdr = ["dep:rtlsdr_mt"]
audio = ["dep:cpal"]
