[package]
name = "waverunner-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI interface for Waverunner SDR platform"

[[bin]]
name = "waverunner"
path = "src/main.rs"

[dependencies]
wavecore = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
hound = { workspace = true }
