[package]
name = "waveviz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU-accelerated SDR visualization engine"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
