[package]
name = "waveviz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU-accelerated SDR visualization engine"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
